kubernetes/apps/base/foundryvtt/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: foundryvtt
  name: foundryvtt
  labels:
    app: foundryvtt

spec:
  replicas: 1
  selector:
    matchLabels:
      app: foundryvtt
  template:
    metadata:
      labels:
        app: foundryvtt
    spec:
      containers:
        - name: foundryvtt
          image: felddy/foundryvtt:13.340
          ports:
            - name: web
              containerPort: 30000
          volumeMounts:
            - name: foundryvtt-data-persistent-storage
              mountPath: /data
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "1"
      volumes:
        - name: foundryvtt-data-persistent-storage
          persistentVolumeClaim:
            claimName: foundryvtt-data-pvc
